common-applications/test-environment/radiaTest-beta/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radia-test-nginx
  namespace: radia-test-beta
spec:
  selector:
    matchLabels:
      app: radia-test-nginx
  template:
    metadata:
      labels:
        app: radia-test-nginx
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: radia-test-nginx
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/nginx-beta:v1.0.20230306102621
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: configmap-nginx
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-configmap
        name: configmap-nginx
