common-applications/test-environment/radiaTest-beta/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radia-test-nginx-service
  namespace: radia-test-beta
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: radia-test-nginx
  type: ClusterIP
